added support for regular dataloaders (need to add tests); added support for setting dataloader options when generating a filtered dataloader, inspecting/manipulating the cache for each one; added support for priming a primary key loader with the results from a filtered loader

--- a/package.json
+++ b/package.json
@@ -33,5 +33,6 @@
   "dependencies": {
     "dataloader": "^1.4.0",
     "fast-json-stable-stringify": "2.0.0"
-  }
+  },
+  "files": ["dist/**/*"]
 }
