--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "prepublish": "npm run build",
     "build": "tsc",
     "test": "mocha -r ts-node/register test/**/*.ts"
   },
@@ -23,10 +24,10 @@
     "@types/chai": "4.1.3",
     "@types/js-yaml": "^3.12.1",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.3",
+    "chai": "^4.2.0",
     "js-yaml": "^3.13.1",
     "mocha": "^6.2.2",
-    "chai": "^4.2.0",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.4"
   },
@@ -34,5 +35,7 @@
     "dataloader": "^1.4.0",
     "fast-json-stable-stringify": "2.0.0"
   },
-  "files": ["dist/**/*"]
+  "files": [
+    "dist/**/*"
+  ]
 }
