--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2018",
+    "target": "es2019",
+    "lib": ["ES2019", "ESNEXT.Array"],
     "module": "commonjs",
     "declaration": true,
     "outDir": "./dist",
