--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dataloader-factory",
-  "version": "3.1.2",
+  "version": "3.1.3",
   "description": "DataLoader classes to make it easier to write complex graphql resolvers.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/txstate-etc/dataloader-factory#readme",
   "devDependencies": {
-    "@types/chai": "4.1.3",
+    "@types/chai": "^4.1.3",
+    "@types/fast-json-stable-stringify": "^2.0.0",
     "@types/js-yaml": "^3.12.2",
     "@types/mocha": "^7.0.2",
     "@types/node": "^12.12.26",
@@ -33,7 +34,7 @@
   },
   "dependencies": {
     "dataloader": "^2.0.0",
-    "fast-json-stable-stringify": "2.0.0"
+    "fast-json-stable-stringify": "^2.0.0"
   },
   "files": [
     "dist/**/*"
