--- a/package.json
+++ b/package.json
@@ -21,20 +21,27 @@
   },
   "homepage": "https://github.com/txstate-etc/dataloader-factory#readme",
   "devDependencies": {
-    "@types/chai": "^4.1.3",
+    "@types/chai": "^4.2.11",
     "@types/fast-json-stable-stringify": "^2.0.0",
-    "@types/js-yaml": "^3.12.2",
+    "@types/js-yaml": "^3.12.4",
     "@types/mocha": "^7.0.2",
-    "@types/node": "^12.12.26",
+    "@types/node": "^14.0.13",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
     "chai": "^4.2.0",
-    "js-yaml": "^3.13.1",
-    "mocha": "^7.1.1",
-    "ts-node": "^8.6.2",
-    "typescript": "^3.7.5"
+    "eslint": "^7.2.0",
+    "eslint-config-standard-with-typescript": "^18.0.2",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "js-yaml": "^3.14.0",
+    "mocha": "^8.0.1",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.5"
   },
   "dependencies": {
     "dataloader": "^2.0.0",
-    "fast-json-stable-stringify": "^2.0.0"
+    "fast-json-stable-stringify": "^2.1.0"
   },
   "files": [
     "dist/**/*"
