--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "dataloader-factory",
-  "version": "3.2.0",
+  "version": "3.2.1",
   "description": "DataLoader classes to make it easier to write complex graphql resolvers.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "prepublish": "npm run build",
-    "build": "tsc",
+    "prepublishOnly": "npm run build",
+    "build": "rm -rf dist && tsc",
     "test": "mocha -r ts-node/register test/**/*.ts"
   },
   "repository": {
@@ -21,23 +21,24 @@
   },
   "homepage": "https://github.com/txstate-etc/dataloader-factory#readme",
   "devDependencies": {
-    "@types/chai": "^4.2.11",
+    "@types/chai": "^4.2.14",
     "@types/fast-json-stable-stringify": "^2.0.0",
-    "@types/js-yaml": "^3.12.4",
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^14.0.13",
-    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@types/js-yaml": "^3.12.5",
+    "@types/mocha": "^8.0.3",
+    "@types/node": "^14.14.6",
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
     "chai": "^4.2.0",
-    "eslint": "^7.2.0",
-    "eslint-config-standard-with-typescript": "^18.0.2",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint": "^7.9.0",
+    "eslint-config-standard-with-typescript": "^19.0.1",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "js-yaml": "^3.14.0",
-    "mocha": "^8.0.1",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.5"
+    "mocha": "^8.2.0",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5"
   },
   "dependencies": {
     "dataloader": "^2.0.0",
