added new type-safe way of defining loaders

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dataloader-factory",
-  "version": "3.2.2",
+  "version": "3.3.0",
   "description": "DataLoader classes to make it easier to write complex graphql resolvers.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -42,7 +42,8 @@
   },
   "dependencies": {
     "dataloader": "^2.0.0",
-    "fast-json-stable-stringify": "^2.1.0"
+    "fast-json-stable-stringify": "^2.1.0",
+    "txstate-utils": "^1.2.23"
   },
   "files": [
     "dist/**/*"
