--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     "@typescript-eslint/consistent-type-assertions": ["error", { "assertionStyle": "as" }],
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-unused-vars": "off", // typescript does this better
     "@typescript-eslint/prefer-readonly": "off",
     "@typescript-eslint/return-await": ["error", "always"],
     "@typescript-eslint/strict-boolean-expressions": "off"
