--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "dataloader-factory",
-  "version": "4.1.3",
+  "version": "4.2.0",
   "description": "DataLoader classes to make it easier to write complex graphql resolvers.",
-  "main": "dist/index.js",
+  "exports": {
+    "require": "./dist/index.js",
+    "import": "./dist-esm/index.js"
+  },
   "types": "dist/index.d.ts",
   "scripts": {
     "prepublishOnly": "npm run build",
@@ -24,19 +27,19 @@
     "@types/chai": "^4.2.14",
     "@types/fast-json-stable-stringify": "^2.0.0",
     "@types/js-yaml": "^4.0.0",
-    "@types/mocha": "^8.2.0",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^14.14.25",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "chai": "^4.3.0",
     "eslint": "^7.19.0",
-    "eslint-config-standard-with-typescript": "^20.0.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-promise": "^5.1.0",
     "js-yaml": "^4.0.0",
-    "mocha": "^8.2.1",
-    "ts-node": "^9.1.1",
+    "mocha": "^9.1.1",
+    "ts-node": "^10.2.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
@@ -44,6 +47,7 @@
     "fast-json-stable-stringify": "^2.1.0"
   },
   "files": [
-    "dist/**/*"
+    "dist/**/*",
+    "dist-esm/**/*"
   ]
 }
