--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "dataloader-factory",
-  "version": "4.4.0",
+  "version": "4.4.1",
   "description": "DataLoader classes to make it easier to write complex graphql resolvers.",
   "exports": {
     "require": "./dist/index.js",
-    "import": "./dist-esm/index.js"
+    "import": "./dist-esm/index.js",
+    "types": "./dist/index.d.ts"
   },
-  "types": "dist/index.d.ts",
   "scripts": {
     "prepublishOnly": "npm run build",
     "build": "rm -rf dist && tsc",
