--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "prepublishOnly": "npm run build",
     "build": "rm -rf dist && tsc && mv dist/index.d.ts dist-esm/index.d.ts",
-    "test": "mocha -r ts-node/register test/**/*.ts"
+    "test": "mocha -r ts-node/register test/**/*.ts",
+    "lint": "eslint --ignore-path .gitignore ."
   },
   "repository": {
     "type": "git",
@@ -27,11 +28,11 @@
   "devDependencies": {
     "@types/chai": "^4.2.14",
     "@types/js-yaml": "^4.0.0",
-    "@types/mocha": "^9.0.0",
+    "@types/mocha": "^10.0.1",
     "chai": "^4.3.0",
-    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-config-standard-with-typescript": "^34.0.0",
     "js-yaml": "^4.0.0",
-    "mocha": "^9.1.1",
+    "mocha": "^10.2.0",
     "ts-node": "^10.2.1",
     "typescript": "^4.1.3"
   },
