--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dataloader-factory",
-  "version": "4.4.3",
+  "version": "4.5.0",
   "description": "DataLoader classes to make it easier to write complex graphql resolvers.",
   "exports": {
     "types": "./dist-esm/index.d.ts",
@@ -12,7 +12,7 @@
     "prepublishOnly": "npm run build",
     "build": "rm -rf dist && tsc && mv dist/index.d.ts dist-esm/index.d.ts",
     "test": "mocha -r ts-node/register test/**/*.ts",
-    "lint": "eslint src test"
+    "lint": "eslint src/**/*.ts test/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -30,11 +30,11 @@
     "@types/js-yaml": "^4.0.0",
     "@types/mocha": "^10.0.1",
     "chai": "^4.3.0",
-    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-config-standard-with-typescript": "^37.0.0",
     "js-yaml": "^4.0.0",
     "mocha": "^10.2.0",
     "ts-node": "^10.2.1",
-    "typescript": "^4.1.3"
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "dataloader": "^2.0.0",
