--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dataloader-factory",
-  "version": "4.5.0",
+  "version": "4.6.0",
   "description": "DataLoader classes to make it easier to write complex graphql resolvers.",
   "exports": {
     "types": "./dist-esm/index.d.ts",
@@ -30,7 +30,7 @@
     "@types/js-yaml": "^4.0.0",
     "@types/mocha": "^10.0.1",
     "chai": "^4.3.0",
-    "eslint-config-standard-with-typescript": "^37.0.0",
+    "eslint-config-love": "^62.0.0",
     "js-yaml": "^4.0.0",
     "mocha": "^10.2.0",
     "ts-node": "^10.2.1",
